14 July 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/controls/button/annotation-button/annotation-button.component.ts:
 Fixed a bug in button selection login, where previsously selected button were
 not deselected if selected from the overlapping area selection widget.

 * clarin-angular/src/app/components/controls/overlapping-areas/overlapping-areas.component.html:
 * clarin-angular/src/app/components/controls/overlapping-areas/overlapping-areas.component.ts:
 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 * clarin-angular/src/app/services/text-widget/text-widget.service.ts:
 * clarin-angular/src/css/clarin-material.scss: Fixed overlaping area
 selection, and added pre-selection for some cases.

12 July 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/package.json:
 * clarin-angular/src/app/app.module.ts:
 * clarin-angular/src/app/components/controls/annotator-widget/annotator-widget.component.ts:
 * clarin-angular/src/app/components/controls/coref/coref-btn/coref-btn.component.ts:
 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 * clarin-angular/src/app/ng-matero/core/bootstrap/menu.service.ts:
 * clarin-angular/src/app/ng-matero/shared/components/error-code/_long-shadow.scss:
 * clarin-angular/src/app/ng-matero/shared/components/error-code/_math.scss:
 * clarin-angular/src/app/ng-matero/shared/shared.module.ts:
 * clarin-angular/src/app/ng-matero/theme/style/_misc.scss:
 * clarin-angular/src/app/services/coreference-color-service/coreference-color.service.ts:
 * clarin-angular/src/css/clarin-annschema.scss:
 * clarin-angular/src/styles.scss:
 * clarin-angular/src/styles/grid/_grid.scss:
 * clarin-angular/src/styles/grid/_mixins.scss:
 * clarin-angular/tsconfig.json: More fixes to get code to compile  under
 Angular 12.

 * clarin-angular/angular.json:
 * clarin-angular/package.json:
 * clarin-angular/src/app/app-routing.module.ts: